# aros-kernel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: BUILD.md
docs/patent/: REVIEW_STATUS.md
src/: lib.rs  main.rs
src/adapter/: circuit_breaker.rs  config.rs  error.rs  mod.rs  provider.rs  request.rs  resolver.rs  response.rs
src/agent/: claude_cli.rs  lifecycle.rs  mod.rs  shell.rs  types.rs
src/dag/: executor.rs  graph.rs  mod.rs  persistence.rs  runtime.rs
src/dispatch/: client.rs  contracts.rs  mod.rs  rpc.rs  server.rs
src/envelope/: error.rs  mod.rs  task_envelope.rs
src/governor/: admission.rs  budget.rs  error.rs  governor.rs  mod.rs
src/hardware/: mod.rs  pressure.rs  probe.rs  snapshot.rs  thermal.rs
src/scheduler/: admission.rs  allocator.rs  mod.rs  recommender.rs
src/store/: acl.rs  engine.rs  error.rs  mod.rs
src/supervisor/: error.rs  handler.rs  health.rs  kernel.rs  mod.rs  process.rs
tests/: GAP_ANALYSIS.md  agent_tests.rs  concurrency_tests.rs  dag_tests.rs  dispatch_tests.rs  edge_case_tests.rs  envelope_property_tests.rs  error_handling_tests.rs  hardware_tests.rs  integration_tests.rs  scheduler_tests.rs  store_tests.rs  stress_tests.rs  supervisor_tests.rs
